Created Every Screen and required API

--- a/api/package.json
+++ b/api/package.json
@@ -4,13 +4,15 @@
   "description": "backend",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
