--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,13 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
 
 # IDE specific files
 .vscode/
+
+# expo eas
+eas.json
