--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.14.15",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.20",
+    "expo-asset": "~11.1.7",
+    "expo-file-system": "~18.1.11",
+    "expo-linking": "^7.1.7",
+    "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-google-places-autocomplete": "^1.8.1",
+    "react-native-leaflet-view": "^1.1.2",
+    "react-native-maps": "^1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
